fix: remove text flickering during animation

--- a/random-jokes/style.css
+++ b/random-jokes/style.css
@@ -75,19 +75,33 @@
 
 .page-main {
   grid-area: main;
-  display: flex;
-  align-items: flex-end;
-  margin-top: -110px;
-  padding-top: 110px;
-  padding-bottom: 70px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "content";
+  margin-top: -130px;
+}
+
+.page-main__bg {
+  grid-area: content;
+  position: relative;
+
+  width: 100%;
+  height: 100%;
 
   background-image: url(assets/img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+
+  z-index: -1;
 }
 
 .page-main__inner {
+  grid-area: content;
+  align-self: end;
+  padding-bottom: 70px;
+
   text-align: center;
 }
 
@@ -168,5 +182,15 @@
   }
   50% {
     filter: hue-rotate(360deg);
+  }
+}
+
+@media (max-width: 500px) {
+  .page-body {
+    font-size: 16px;
+  }
+
+  .quote-text {
+    font-size: 20px;
   }
 }
